--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <h1>Dashboard</h1>
-    <a href="/student/add">Add Student</a>
-    <a href="/quiz/add">Add Quiz</a>
+    <a href="/student/add">Add Student</a> | <a href="/quiz/add">Add Quiz</a> | <a href="/results/add">Add Quiz Result</a>
     <h2>Students</h2>
     <table border="1">
         <tr>
