--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -2,40 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Add Student</title>
 </head>
 <body>
-    <h1>Dashboard</h1>
-    <a href="/student/add">Add Student</a> | <a href="/quiz/add">Add Quiz</a> | <a href="/results/add">Add Quiz Result</a>
-    <h2>Students</h2>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-        </tr>
-        {% for student in students %}
-        <tr>
-            <td>{{ student.id }}</td>
-            <td><a href="/student/{{ student.id }}">{{ student.first_name }} {{ student.last_name }}</a></td>
-        </tr>
-        {% endfor %}
-    </table>
-    <h2>Quizzes</h2>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Subject</th>
-            <th>Number of Questions</th>
-            <th>Date</th>
-        </tr>
-        {% for quiz in quizzes %}
-        <tr>
-            <td>{{ quiz.id }}</td>
-            <td>{{ quiz.subject }}</td>
-            <td>{{ quiz.num_questions }}</td>
-            <td>{{ quiz.quiz_date }}</td>
-        </tr>
-        {% endfor %}
-    </table>
+    <h1>Add Student</h1>
+    <form method="POST">
+        <label for="first_name">First Name:</label>
+        <input type="text" name="first_name" id="first_name" required>
+        <br>
+        <label for="last_name">Last Name:</label>
+        <input type="text" name="last_name" id="last_name" required>
+        <br>
+        <button type="submit">Add Student</button>
+    </form>
+    <a href="/dashboard">Back to Dashboard</a>
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <p>{{ messages[0] }}</p>
+        {% endif %}
+    {% endwith %}
 </body>
 </html>
