--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,34 +8,16 @@
     <h1>Dashboard</h1>
     <a href="/student/add">Add Student</a> | <a href="/quiz/add">Add Quiz</a> | <a href="/results/add">Add Quiz Result</a>
     <h2>Students</h2>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-        </tr>
+    <ul>
         {% for student in students %}
-        <tr>
-            <td>{{ student.id }}</td>
-            <td><a href="/student/{{ student.id }}">{{ student.first_name }} {{ student.last_name }}</a></td>
-        </tr>
+        <li><a href="/student/{{ student.id }}">{{ student.first_name }} {{ student.last_name }}</a></li>
         {% endfor %}
-    </table>
+    </ul>
     <h2>Quizzes</h2>
-    <table border="1">
-        <tr>
-            <th>ID</th>
-            <th>Subject</th>
-            <th>Number of Questions</th>
-            <th>Date</th>
-        </tr>
+    <ul>
         {% for quiz in quizzes %}
-        <tr>
-            <td>{{ quiz.id }}</td>
-            <td>{{ quiz.subject }}</td>
-            <td>{{ quiz.num_questions }}</td>
-            <td>{{ quiz.quiz_date }}</td>
-        </tr>
+        <li>{{ quiz.subject }} ({{ quiz.quiz_date }})</li>
         {% endfor %}
-    </table>
+    </ul>
 </body>
 </html>
