--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -15,7 +15,7 @@
         <br>
         <button type="submit">Add Student</button>
     </form>
-    <a href="/dashboard">Back to Dashboard</a>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <p>{{ messages[0] }}</p>
