--- a/templates/view_results.html
+++ b/templates/view_results.html
@@ -24,6 +24,6 @@
     {% else %}
         <p>No Results</p>
     {% endif %}
-    <a href="/dashboard">Back to Dashboard</a>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
 </body>
 </html>
