--- a/templates/add_result.html
+++ b/templates/add_result.html
@@ -28,7 +28,7 @@
         <br>
         <button type="submit">Add Result</button>
     </form>
-    <a href="/dashboard">Back to Dashboard</a>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a>
     {% with messages = get_flashed_messages() %}
         {% if messages %}
             <p>{{ messages[0] }}</p>
